@@ -22,12 +22,11 @@ $date = date("yy-m-d h:m:s", time());
 $method = $_SERVER['REQUEST_METHOD'];
 switch($method){
   case "POST":
-    $sql =  "INSERT INTO sessionData (session_id, title, room, modName) VALUES (NULL, $title, $room, $modName);";
+    $sql =  "INSERT INTO `sessionData` (title, room, modName) VALUES ('$title', '$room', '$modName');";
     echo $sql;
-   //if(mysqli_query($conn, $sql)){ 
+   if(mysqli_query($conn, $sql)){ 
       echo " Session created";
-   //}
-  
+    }
     break;
 }
 mysqli_close($conn);
